--- a/BigNews/admin/index.html
+++ b/BigNews/admin/index.html
@@ -54,5 +54,23 @@
 
         </div>
     </div>
+    <script>
+        // 用原生的方法，获取token指令
+        let xhr = new XMLHttpRequest();
+        xhr.open("get", "http://localhost:8080/api/v1/admin/user/info");
+        xhr.setRequestHeader("Authorization", localStorage.getItem("token"))
+        xhr.send();
+        xhr.onreadystatechange = function () {
+            if (xhr.status === 200 && xhr.readyState === 4) {
+                let res = JSON.parse(xhr.responseText);
+                console.log(res);
+                // 成功登录index后，加载信息
+                $(".user_info>span").html(`欢迎&nbsp;&nbsp${res.data.nickname}`);
+                $(".user_info>img").attr("src", res.data.userPic);
+                $(".user_center_link>img").attr("src", res.data.userPic);
+            }
+        }
+    </script>
 </body>
+
 </html>
