在jq库设置默认的请求头
每次登录成功，自动获取请求头，如果没有token指令，就返回登陆页

--- a/BigNews/admin/login.html
+++ b/BigNews/admin/login.html
@@ -91,7 +91,7 @@
                 console.log(localStorage);
 
                 $('#myModal').on('hidden.bs.modal', function (e) {
-                  window.location.href = 'index.html';
+                  window.location.href = './index.html';
                 })
               }
               // else {
