--- a/BigNews/admin/index.html
+++ b/BigNews/admin/index.html
@@ -74,11 +74,14 @@
             //*用jq的方法，获取token指令
             $.get({
                 url: "http://localhost:8080/api/v1/admin/user/info",
-                headers: { Authorization: localStorage.getItem("token") },
+                // headers: { Authorization: localStorage.getItem("token") },
+                // 抽离headers，放在jq库里面
                 dataType: "json",
                 success: function (res) {
                     console.log(res);
-
+                    $(".user_info>span").html(`欢迎&nbsp;&nbsp${res.data.nickname}`);
+                    $(".user_info>img").attr("src", res.data.userPic);
+                    $(".user_center_link>img").attr("src", res.data.userPic);
                 }
             })
 
