--- a/BigNews/admin/index.html
+++ b/BigNews/admin/index.html
@@ -84,6 +84,11 @@
                     $(".user_center_link>img").attr("src", res.data.userPic);
                 }
             })
+            // 退出登录操作
+            $(".logout").click(function () {
+                localStorage.removeItem("token");
+                location.href = "./login.html";
+            })
 
         })
 
