--- a/BigNews/admin/index.html
+++ b/BigNews/admin/index.html
@@ -13,6 +13,8 @@
     <script src="./libs/jquery-1.12.4.min.js"></script>
     <!-- 导入bootstrap的js文件 -->
     <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
+    <!-- 引入接口js文件 -->
+    <script src="./libs/http.js"></script>
 </head>
 
 <body>
@@ -73,7 +75,7 @@
             // }
             //*用jq的方法，获取token指令
             $.get({
-                url: "http://localhost:8080/api/v1/admin/user/info",
+                url: BigNew.user_info,
                 // headers: { Authorization: localStorage.getItem("token") },
                 // 抽离headers，放在jq库里面
                 dataType: "json",
