--- a/BigNews/admin/login.html
+++ b/BigNews/admin/login.html
@@ -15,6 +15,8 @@
   <script src="./libs/jquery-1.12.4.min.js"></script>
   <!-- 引入bootstrap的js文件 -->
   <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
+  <!-- 引入接口js文件 -->
+  <script src="./libs/http.js"></script>
 </head>
 
 <body>
@@ -72,7 +74,7 @@
           return
         } else {
           $.post({
-            url: "http://localhost:8080/api/v1/admin/user/login",
+            url: BigNew.user_login,
             data: {
               username: $(".input_txt").val().trim(),
               password: $(".input_pass").val().trim()
